2013-03-12  Tim Horton  <timothy_horton@apple.com>

        Unreviewed, disabling tests for Win EWS.

        win-ews obviously cannot keep up with running tests, it's >300 behind.
        Probably doesn't help that its (likely) running tests serially.

        * Scripts/webkitpy/tool/commands/earlywarningsystem.py:
        (WinEWS):

2013-03-12  Tim Horton  <timothy_horton@apple.com>

        Add a --build-directory argument to delete-stale-build-files
        https://bugs.webkit.org/show_bug.cgi?id=112198

        Reviewed by Ryosuke Niwa.

        * BuildSlaveSupport/delete-stale-build-files:
        (main): Add --build-directory argument.

2013-03-12  Oliver Hunt  <oliver@apple.com>

        Appease MSVC

        * TestWebKitAPI/Tests/WTF/CheckedArithmeticOperations.cpp:
        (TestWebKitAPI):

2013-03-12  Oliver Hunt  <oliver@apple.com>

        Add more Checked<> tests
        https://bugs.webkit.org/show_bug.cgi?id=112190

        Reviewed by Geoffrey Garen.

        Tests!

        * TestWebKitAPI/Tests/WTF/CheckedArithmeticOperations.cpp:
        (TestWebKitAPI):

2013-03-12  Julie Parent  <jparent@chromium.org>

        Cleanup: Move loading complete function into callback, rather than global.
        https://bugs.webkit.org/show_bug.cgi?id=112167

        Reviewed by Dirk Pranke.
        
        Stop calling global functions, pass in proper handler to Loader
        constructor. Note that the callback is optional, as tests, and
        some potential dashboards, do not need one.

        * TestResultServer/static-dashboards/dashboard_base.js:
        * TestResultServer/static-dashboards/loader.js:
        (.):
        * TestResultServer/static-dashboards/loader_unittests.js:

2013-03-12  Christophe Dumez  <ch.dumez@sisa.samsung.com>

        [EFL][WK2] Add popup menu support to MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=108934

        Reviewed by Kenneth Rohde Christiansen.
