@@ -1,3 +1,10 @@
+2013-03-12  Oliver Hunt  <oliver@apple.com>
+
+        Unbreak api tests
+
+        * TestWebKitAPI/Tests/WTF/CheckedArithmeticOperations.cpp:
+        (TestWebKitAPI):
+
 2013-03-12  Tim Horton  <timothy_horton@apple.com>
 
         Unreviewed, disabling tests for Win EWS.
